[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-40-Distruct-Brick-Block.gd" type="Script" id=1]
[ext_resource path="res://Scenes/FX/FX-10-Red-Brick-04.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Explosions/Ex-11-FX-Small-20x20.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Tile_Sets/Basic_Red_set.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.22217
height = 13.8053

[node name="MP-40-Distruct-Brick-Red-Brick" type="StaticBody2D" groups=[
"hittable",
"map",
]]
collision_layer = 393228
collision_mask = 393740
script = ExtResource( 1 )
brick_explode = ExtResource( 2 )
head_explode = ExtResource( 3 )

[node name="Basic_Red_set" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 3
hframes = 20
frame = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.0626717, -0.25069 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.376038, 11.0303 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Timer_respawn" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_respawn" to="." method="_on_Timer_respawn_timeout"]
